# ESP32_DRONE_REMOTEID

./: .gitattributes  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  ENV.md  README.md  ROADMAP.md  TESTS.md  idf_component.yml  partitions.csv  sdkconfig
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  greetings.yml  pages.yml  release.yml  stale.yml
ESP32_DRONE_REMOTE_ID_Firmware/: idf_component.yml  partitions.csv  partitions_2mb.csv
ESP32_DRONE_REMOTE_ID_Firmware/components/esp_remote_id/: CMakeLists.txt  idf_component.yml
ESP32_DRONE_REMOTE_ID_Firmware/main/: main.c
RID_Hub/: RID_Hub.bat  index.html  main.js  package.json  preload.js
RID_Hub/renderer/: app.js  index.html  style.css
RID_Hub/rid_hub/: server.py
RID_Hub/src/: capture.js  decoder.js  tracker.js
components/esp_remote_id/: CMakeLists.txt
components/esp_remote_id/include/: esp_remote_id.h
components/esp_remote_id/src/: ble_tx.c  esp_remote_id.c  msp_parser.c  nmea_parser.c  web_config.c  wifi_tx.c
components/esp_remote_id/webui/: config.html
docs/: config(demo).html  config.html  index.html  manifest.json
firmware/ESP32_DRONE_ID/components/opendroneid/: CMakeLists.txt  opendroneid.h
firmware/ESP32_DRONE_ID/main/: CMakeLists.txt
id_france/: id_france.cpp  id_france.h
id_scanner/: id_scanner.ino
todolist/: softwarestatus.md
tools/: index.html  script.js  styles.css  web_flasher.html
tools/ESP_DRONE_REMOTEID_ANALIZER/: __main__.py  gui.py  requirements.txt  rid_cli.py
(+15 files in other folders)
